c4prj2_input/grade.txt
Grading at Mon Aug  3 09:17:51 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:33:27: error: ‘lin’ undeclared (first use in this function)
    if(line[line_ind]==32||lin[line_ind]==10)
                           ^
input.c:33:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
